padding fixes on mobile

--- a/components/hero/style.module.scss
+++ b/components/hero/style.module.scss
@@ -176,7 +176,7 @@
   @media (max-width: 455px) {
     .heading {
       left: 0;
-      padding: 2rem 0;
+      padding: 2rem 1rem;
 
       h1{
         padding: 2rem 0;
